implementação do gateway

--- a/gateway/Gateway.Api/appsettings.json
+++ b/gateway/Gateway.Api/appsettings.json
@@ -5,5 +5,43 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "user": {
+        "ClusterId": "user",
+        "Match": {
+          "Path": "/user/{**catch-all}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/user" }
+        ]
+      },
+      "catalog": {
+        "ClusterId": "catalog",
+        "Match": {
+          "Path": "/catalog/{**catch-all}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/catalog" }
+        ]
+      }
+    },
+    "Clusters": {
+      "user": {
+        "Destinations": {
+          "user1": {
+            "Address": "http://userservice.api:8080/"
+          }
+        }
+      },
+      "catalog": {
+        "Destinations": {
+          "catalog1": {
+            "Address": "http://catalogservice.api:8080/"
+          }
+        }
+      }
+    }
+  }
 }
