--- a/services/catalog-service/CatalogService.Api/Properties/launchSettings.json
+++ b/services/catalog-service/CatalogService.Api/Properties/launchSettings.json
@@ -6,15 +6,16 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5160"
+      "applicationUrl": "http://localhost:5146"
     },
     "https": {
       "commandName": "Project",
+      "launchUrl": "/scalar",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7020;http://localhost:5160"
+      "applicationUrl": "https://localhost:7053;http://localhost:5146"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
