--- a/gateway/Gateway.Api/appsettings.json
+++ b/gateway/Gateway.Api/appsettings.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
+      "frontend": {
+        "ClusterId": "frontend",
+        "Match": {
+          "Path": "/{**catch-all}"
+        }
+      },
       "user": {
         "ClusterId": "user",
         "Match": {
@@ -28,6 +34,13 @@
       }
     },
     "Clusters": {
+      "frontend": {
+        "Destinations": {
+          "frontend1": {
+            "Address": "http://frontend:80/"
+          }
+        }
+      },
       "user": {
         "Destinations": {
           "user1": {
